--- a/aml_config/conda_dependencies.yml
+++ b/aml_config/conda_dependencies.yml
@@ -9,3 +9,9 @@
 name: project_environment
 dependencies:
   - python=3.5.2
+  - tensorflow
+  - h5py
+  - Keras
+  - pip:
+    - azure-ml-api-sdk
+    - Pillow
