--- a/aml_config/conda_dependencies.yml
+++ b/aml_config/conda_dependencies.yml
@@ -11,8 +11,8 @@ dependencies:
   - python=3.5.2
 
   - pip:
-    - azure-ml-api-sdk
-    - Pillow
-    - tensorflow
-    - keras
-    - h5py
+    - azure-ml-api-sdk=0.1.0a9
+    - Pillow=4.2.1
+    - tensorflow=1.3.0
+    - keras=2.0.8
+    - h5py=2.7.1
